Added tutorial for setup in Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,9 +21,14 @@ src/renderLib.hpp
 
 SET(SDL2_DIR SDL2/cmake)
 find_package(SDL2 REQUIRED)
+
+SET(SDL2_image_DIR SDL2_image/cmake)
 find_package(SDL2_image REQUIRED)
+
+SET(SDL2_ttf_DIR SDL2_ttf/cmake)
 find_package(SDL2_ttf REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SD2L_TTF_INCLUDE_DIRS})
+
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS})
 
 add_executable(${PROJECT_NAME} src/main.cpp)
 
